--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ langchain
 langchain-groq
 langchain_community
 langchain_core
-chromadb
+chromadb>=0.3.0 
+pysqlite3-binary
+
 # sqlite3>=3.35.0
 -e .
 
